force-app/main/default/objects/Accesorios_del_informe__c/Accesorios_del_informe__c.object-meta.xml
<CustomObject>
    <label>Accesorios del informe</label>
    <nameField>
        <displayFormat>AccInf-{00000000}</displayFormat>
        <label>Nombre de Accesorios del informe</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accesorios del informe</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>