force-app/main/default/objects/Accesorios_del_informe__c/fields/Accesorio__c.field-meta.xml
<CustomField>
    <fullName>Accesorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accesorio</label>
    <referenceTo>Accesorios__c</referenceTo>
    <relationshipLabel>Accesorios del informe</relationshipLabel>
    <relationshipName>Accesorios_del_informe</relationshipName>
    <type>Lookup</type>
</CustomField>