force-app/main/default/objects/Accesorios_del_informe__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>