force-app/main/default/objects/Accesorios_del_informe__c/fields/Codigo_de_parte__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_parte__c</fullName>
    <formula>Accesorio__r.CodigoParte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de parte</label>
    <type>Text</type>
</CustomField>