force-app/main/default/objects/Accesorios_del_informe__c/fields/Codigo_equivalente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_equivalente__c</fullName>
    <formula>Accesorio__r.CodParteEquivalente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código equivalente</label>
    <type>Text</type>
</CustomField>