force-app/main/default/objects/Accesorios_del_informe__c/fields/Combo__c.field-meta.xml
<CustomField>
    <fullName>Combo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Combo</label>
    <referenceTo>CombosDeInformeDeNegociacion__c</referenceTo>
    <relationshipLabel>Accesorios del informe</relationshipLabel>
    <relationshipName>Accesorios_del_informe</relationshipName>
    <type>Lookup</type>
</CustomField>