force-app/main/default/objects/Accesorios_del_informe__c/fields/Consecutivo__c.field-meta.xml
<CustomField>
    <fullName>Consecutivo__c</fullName>
    <label>Conscutivo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>