force-app/main/default/objects/Accesorios_del_informe__c/fields/Descripci_n_del_accesorio__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_del_accesorio__c</fullName>
    <formula>Accesorio__r.DescripcionAmplia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción del accesorio</label>
    <type>Text</type>
</CustomField>