force-app/main/default/objects/Accesorios_del_informe__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No solicitado</fullName>
            </value>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Despachado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>