force-app/main/default/objects/Accesorios_del_informe__c/fields/Estado_disponibilidad__c.field-meta.xml
<CustomField>
    <fullName>Estado_disponibilidad__c</fullName>
    <label>Disponibilidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>