force-app/main/default/objects/Accesorios_del_informe__c/fields/Estado_disponibilidad_codigo_equivalente__c.field-meta.xml
<CustomField>
    <fullName>Estado_disponibilidad_codigo_equivalente__c</fullName>
    <label>Estado disponibilidad código equivalente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>