force-app/main/default/objects/Accesorios_del_informe__c/fields/InformeNegociacion__c.field-meta.xml
<CustomField>
    <fullName>InformeNegociacion__c</fullName>
    <label>Informe de Negociación</label>
    <referenceTo>Informe_de_Negociaci_n__c</referenceTo>
    <relationshipLabel>Accesorios del informe</relationshipLabel>
    <relationshipName>Accesorios_del_informe</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>