force-app/main/default/objects/Accesorios_del_informe__c/fields/Solicitar_Accesorio_Equivalente__c.field-meta.xml
<CustomField>
    <fullName>Solicitar_Accesorio_Equivalente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solicitar accesorio equivalente</label>
    <type>Checkbox</type>
</CustomField>