force-app/main/default/objects/Accesorios_del_informe__c/fields/Total_Accesorios__c.field-meta.xml
<CustomField>
    <fullName>Total_Accesorios__c</fullName>
    <label>Total Accesorios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>